welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:1: error: type mismatch;
 found   : Unit
 required: Int
def close10(a:Int, b:Int): Int = {
                                 ^